--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,9 @@
                         <a href="lk.html" class="nav-pages__link" target="_blank">Личный кабинет</a>
                     </li>
                     <li class="nav-pages__item">
+                        <a href="lk-empty.html" class="nav-pages__link" target="_blank">Личный кабинет (Пустой)</a>
+                    </li>
+                    <li class="nav-pages__item">
                         <a href="lk-data.html" class="nav-pages__link" target="_blank">Личный кабинет (Личные данные)</a>
                     </li>
                     <li class="nav-pages__item">
@@ -313,6 +316,9 @@
                     </li>
                     <li class="nav-pages__item">
                         <a href="registration_04.html" class="nav-pages__link" target="_blank">Регистрация 4</a>
+                    </li>
+                    <li class="nav-pages__item">
+                        <a href="registration_error.html" class="nav-pages__link" target="_blank">Регистрация (ошибка кода)</a>
                     </li>
                 </ul>
                 <ul class="nav-pages__list">
