--- a/src/main.html
+++ b/src/main.html
@@ -91,7 +91,10 @@
         <div class="mobile-menu__wrapper">
             <ul class="mobile-menu__list">
                 <li class="mobile-menu__item">
-                    <a href="#" class="mobile-menu__trigger mobile-menu__trigger--dropdown">Новости</a>
+                    <div class="mobile-menu__inner">
+                        <a href="about-press-news.html" class="mobile-menu__trigger">Новости</a>
+                        <button class="mobile-menu__dropdown" aria-label="Открыть/закрыть"></button>
+                    </div>
                     <ul class="mobile-menu__submenu">
                         <li class="mobile-menu__subitem">
                             <a href="#" class="mobile-menu__link">Медиатека для СМИ</a>
@@ -105,7 +108,10 @@
                     </ul>
                 </li>
                 <li class="mobile-menu__item">
-                    <a href="#" class="mobile-menu__trigger mobile-menu__trigger--dropdown">ЛСП</a>
+                    <div class="mobile-menu__inner">
+                        <a href="social-entrepreneurship.html" class="mobile-menu__trigger">ЛСП</a>
+                        <button class="mobile-menu__dropdown" aria-label="Открыть/закрыть"></button>
+                    </div>
                     <ul class="mobile-menu__submenu">
                         <li class="mobile-menu__subitem">
                             <a href="#" class="mobile-menu__link">Вебинары</a>
