--- a/src/main.html
+++ b/src/main.html
@@ -964,12 +964,12 @@
                             <h3 class="section-heading__title section-heading__title--uppercase">Лаборатория <br>социального предпринимательства</h3>
                         </div>
                         <div class="swiper-buttons">
-                            <button class="swiper-button-prev" aria-label="Назад">
+                            <button class="swiper-button-prev js-social-entrepreneurship-prev" aria-label="Назад">
                                 <svg class="swiper-button-icon">
                                     <use xlink:href="img/dist/sprite.svg#icon-arrow-prev"></use>
                                 </svg>
                             </button>
-                            <button class="swiper-button-next" aria-label="Далее">
+                            <button class="swiper-button-next js-social-entrepreneurship-next" aria-label="Далее">
                                 <svg class="swiper-button-icon">
                                     <use xlink:href="img/dist/sprite.svg#icon-arrow-next"></use>
                                 </svg>
